bynkc/tests/fixtures/negative/122_state_sum_no_initialiser/src/demo.bynk
context demo

type Light = enum { Red, Green }

agent Signal {
  key id: String

  state {
    colour: Light,
  }

  on call peek() -> Effect[Result[(), String]] {
    Ok(())
  }
}
